[package]
name = "nospin"
description = "Rust crate containing an embedded version of a Mutex which can be used in `no_std` projects which are single-threaded."
version = "0.2.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WorksButNotTested/nospin"
keywords = ["nostd", "mutex", "lazy", "once", "single-threaded"]
edition = "2024"
rust-version = "1.85"
categories = ["embedded", "os"]
authors = [
  "WorksButNotTested <62701594+WorksButNotTested@users.noreply.github.com>",
]
documentation = "https://docs.rs/nospin"

[lib]
crate-type = ["rlib"]

[features]
default = ["lazy", "lock_api", "mutex", "once", "rwlock"]
# Enables `Lazy`.
lazy = ["once"]
# Enables `lock_api`-compatible types that use the primitives in this crate internally.
lock_api = ["dep:lock_api_crate"]
# Enables `Mutex`.
mutex = []
# Enables `Once`.
once = []
# Enables `RwLock`.
rwlock = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lock_api_crate = { package = "lock_api", version = "0.4", optional = true }

[build-dependencies]
just = { version = "1.40.0" }
